# SandClock

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  errors.rs  lib.rs  test.rs  timer_loop.rs  user_table.rs
